# golded-plus

./: .gitignore  .travis.yml  BuildAll.dsp  CMakeLists.txt  Config.def  File_id.diz  GNUmakef.def  GNUmakef.inc  GNUmakef.lib  GNUmakef.prg  MSGBase.def  Makefile  README.md  appveyor.yml  dist-gpc.sh  dist-gpd.sh  dist-gpl.sh  dist-gps.sh  dist-gpv.sh  dist-gpw.sh  dist-sx86.sh  format-code.sh  gedwin.mak  golded.bat  golded.dsp  golded.dsw  golded.mak  golded.opt  golded.sln  golded.spec  golded.vs2017.sln  goldnode.dsp  rddt.dsp  srcdate.h  uncrustify70.1.cfg
.github/workflows/: cmake-multi-platform.yml
FreeBSD/port/: Makefile  distinfo  pkg-descr  pkg-plist
cfgs/: File_id.diz
cfgs/charset/: 1125_i-5.chs  1125_u8.chs  12501250.chs  12501251.chs  12501252.chs  12501253.chs  12501254.chs  12501257.chs  12501258.chs  1250_437.chs  1250_850.chs  1250_858.chs  1250_859.chs  1250_asc.chs  1250_i-1.chs  1250_i15.chs  1250_mac.chs  12511250.chs  12511251.chs  12511252.chs  12511253.chs  12511254.chs  12511257.chs  12511258.chs  1251_437.chs  1251_850.chs  1251_858.chs  1251_859.chs  1251_asc.chs  1251_i-1.chs  1251_i-5.chs  1251_i15.chs  1251_mac.chs  12521250.chs  12521251.chs  12521252.chs  12521253.chs  12521254.chs  12521257.chs  12521258.chs  (+284 more)
cfgs/colorset/: gedcol00.cfg  gedcol01.cfg  gedcol02.cfg  gedcol03.cfg  gedcol04.cfg  gedcol05.cfg  gedcol06.cfg  gedcol07.cfg  gedcol08.cfg  gedcol09.cfg  gedcol10.cfg  gedcol11.cfg  gedcol12.cfg  gedcol13.cfg  gedcol14.cfg  gedcol15.cfg  gedcol16.cfg  gedcol17.cfg  gedcol18.cfg  gedcol19.cfg  gedcol20.cfg  gedcol21.cfg  gedcol22.cfg  gedcol23.cfg  gedmon00.cfg  gedmon01.cfg  gedmon02.cfg
cfgs/config/: advanced.cfg  advanced.rus  aliasru.cfg  charsets.cfg  gedcolor.cfg  gedcolor.rus  gedlngdk.cfg  gedlngit.cfg  gedlngnl.cfg  gedlngus.cfg  goldhelp.cfg  goldhelp.rus  goldkeys.cfg  goldkeys.rus  goldlang.cfg  goldlang.ger  goldlang.it  goldlang.nl  goldlang.ru2  goldlang.ru3  goldlang.rus  goldlang.sv  simple.cfg  xlatcfg.pl
cfgs/template/: dansk.tpl  default.tpl  email.tpl  golded.cfm  golded.tpl  newsgrps.tpl  rusCP866.tpl
chsgen/: AltUnicodeData.txt  Makefile  UnicodeData.txt  chsgen.cc  codepages.bat
chsgen/map/: armscii8.txt  ast166-8.txt  cp037.txt  cp1006.txt  cp1026.txt  cp1258.txt  (+31 more)
contrib/: readme.txt
debian/: README.source  changelog  control  copyright  dirs  docs  golded.xpm  goldedplus.lintian-overrides  menu  patch-Makefile  patch-mygolded_h.sed  postinst  postrm  preinst  prerm  rules
docs/: Makefile  StyleGuide  bugrepen.txt  building.txt  golded.1  goldnode.1  license.txt  linux.txt  ncurses.txt  notework.rus  notework.txt  rddt.1  readme.txt  rusfaq.txt  rusfaq_utf8.txt  tips.os2  tips.txt  todowork.txt  tokencfg.txt  tokentpl.txt
etc/: gecolor.conf  golded.conf  goldkeys.cfg  taglines  twit
golded3/: CMakeLists.txt  Makefile  gcalst.cpp  gcarea.cpp  gccfgg.cpp  gccfgg.h  gccfgg0.cpp  gccfgg1.cpp  gccfgg2.cpp  gccfgg3.cpp  gccfgg4.cpp  gccfgg5.cpp  gccfgg6.cpp  gccfgg7.cpp  gccfgg8.cpp  gckeys.cpp  gckeys.h  gclang.cpp  gclang.h  gcmisc.cpp  gcprot.h  geall.h  gealst.cpp  gearea.cpp  gecarb.cpp  gecfgg.h  gecmfd.cpp  gectnr.cpp  gectnr.h  gectrl.cpp  gedcyg.rc  gedemx.rc  gedoit.cpp  gedoss.cpp  geedit.cpp  geedit.h  geedit2.cpp  geedit3.cpp  gefile.cpp  gefind.cpp  (+48 more)
goldlib/: CMakeLists.txt
goldlib/gall/: CMakeLists.txt  Makefile  be_lock.c  be_lock.h  gall.all  gasmamis.h  gbmh.cpp  gbmh.h  gcharset.cpp  gcharset.h  gcmpall.h  gcrc16tb.cpp  gcrc32tb.cpp  gcrcall.h  gcrchash.cpp  gcrckeyv.cpp  gcrcm16.cpp  gcrcm32.cpp  gcrcs16.cpp  gcrcs32.cpp  gctype.h  gcurses.h  gdbgerr.cpp  gdbgerr.h  gdbgexit.cpp  gdbgtrk.cpp  gdbgtrk.h  gdefs.h  gdirposx.cpp  gdirposx.h  geall.h  gespell.cpp  gespell.h  geval.cpp  geval.h  gevalhum.cpp  gevalrpn.cpp  gfile.cpp  gfile.h  gfilport.cpp  (+135 more)
goldlib/gcfg/: CMakeLists.txt  Makefile  gcfg.all  gedacfg.cpp  gedacfg.h  gs_db.h  gs_ez102.h  gs_ez110.h  gs_fd.h  gs_fech4.h  gs_fech5.h  gs_fech6.h  gs_fm092.h  gs_fm10g.h  gs_fm116.h  gs_ge120.h  gs_im160.h  gs_im175.h  gs_inter.h  gs_lo240.h  gs_max3.h  gs_opus.h  gs_pb200.h  gs_pcb.h  gs_pop.h  gs_qbbs.h  gs_qfrnt.h  gs_qwk.h  gs_ra.h  gs_ra2.h  gs_recho.h  gs_sbbs.h  gs_sync.h  gs_ts.h  gs_wmail.h  gs_wtr.h  gs_xbbs.h  gs_xmail.h  gxareas.cpp  gxcrash.cpp  (+41 more)
goldlib/gcui/: CMakeLists.txt  Makefile  gcui.all  gcurses.h  gkbdbase.cpp  gkbdbase.h  gkbdcode.h  gkbdgetm.cpp  gkbdwait.cpp  gmnubase.h  gmoubase.cpp  gmoubase.h  gsrchmgr.cpp  gsrchmgr.h  gvidall.h  gvidbase.cpp  gvidinit.cpp  gwinall.h  gwinbase.cpp  gwindow.cpp  gwindow.h  gwinhelp.h  gwinhlp1.cpp  gwinhlp2.cpp  gwininit.cpp  gwinline.cpp  gwinmenu.cpp  gwinmnub.cpp  gwinpckf.cpp  gwinpcks.cpp  gwinpick.cpp  gwinpick.h  gwinput.h  gwinput2.cpp
goldlib/gmb3/: CMakeLists.txt  Makefile  gmb3.all  gmo_msg.h  gmoarea.cpp  gmoarea.h  gmoezyc.h  gmoezyc1.cpp  gmoezyc2.cpp  gmoezyc3.cpp  gmoezyc4.cpp  gmoezyc5.cpp  gmofido.h  gmofido1.cpp  gmofido2.cpp  gmofido3.cpp  gmofido4.cpp  gmofido5.cpp  gmohuds.cpp  gmohuds.h  gmohuds1.cpp  gmohuds2.cpp  gmohuds3.cpp  gmohuds4.cpp  gmohuds5.cpp  gmojamm.h  gmojamm1.cpp  gmojamm2.cpp  gmojamm3.cpp  gmojamm4.cpp  gmojamm5.cpp  gmopcbd.h  gmopcbd1.cpp  gmopcbd2.cpp  gmopcbd3.cpp  gmopcbd4.cpp  gmopcbd5.cpp  gmoprot.h  gmosmb.h  gmosmb1.cpp  (+20 more)
goldlib/uulib/: CMakeLists.txt  Makefile  config.h  crc32.h  fptools.c  fptools.cpp  fptools.h  uucheck.c  uucheck.cpp  uudeview.h  uuencode.c  uuencode.cpp  uuint.h  uulib.all  uulib.c  uulib.cpp  uunconc.c  uunconc.cpp  uuscan.c  uuscan.cpp  uustring.c  uustring.cpp  uustring.h  uuutil.c  uuutil.cpp
goldnode/: CMakeLists.txt  Makefile  goldnode.all  goldnode.cpp
manuals/: gold_ref.tei  gold_ref.txt  gold_usr.txt
rddt/: CMakeLists.txt  Makefile  rddt.all  rddt.cpp
windows/: BuildAll.dsp  BuildAll.mak  BuildAll.vcproj  golded.dep  golded.dsp  golded.mak  golded.vcproj  golded.vcxproj  goldlib.dep  goldlib.dsp  goldlib.mak  goldlib.vcproj  goldlib.vcxproj  goldnode.dep  goldnode.dsp  goldnode.mak  goldnode.vcproj  goldnode.vcxproj  rddt.dep  rddt.dsp  rddt.mak  rddt.vcproj  rddt.vcxproj
(+111 files in other folders)
