set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(gcfg_SOURCES
  gedacfg.cpp
  gxareas.cpp
  gxcrash.cpp
  gxdb.cpp
  gxdutch.cpp
  gxezy102.cpp
  gxezy110.cpp
  gxfd.cpp
  gxfecho4.cpp
  gxfecho5.cpp
  gxfecho6.cpp
  gxfidpcb.cpp
  gxfm092.cpp
  gxfm100.cpp
  gxfm116.cpp
  gxgecho.cpp
  gxhpt.cpp
  gximail4.cpp
  gximail5.cpp
  gximail6.cpp
  gxinter.cpp
  gxlora.cpp
  gxmax3.cpp
  gxme2.cpp
  gxopus.cpp
  gxpcb.cpp
  gxportal.cpp
  gxprobrd.cpp
  gxqfront.cpp
  gxqecho.cpp
  gxquick.cpp
  gxra.cpp
  gxraecho.cpp
  gxspace.cpp
  gxsquish.cpp
  gxsuper.cpp
  gxsync.cpp
  gxtimed.cpp
  gxtmail.cpp
  gxts.cpp
  gxwmail.cpp
  gxwtr.cpp
  gxxbbs.cpp
  gxxmail.cpp
)
include_directories(../gall ../glibc)
ADD_LIBRARY(gcfg STATIC ${gcfg_SOURCES})
